package Interface;



public interface AparelhoTelefonico{
        
    public void ligarNumero(String telefone);
    public void desligarLigacao();
    public void ligarCelular();
    public void desligarCelular();
}