package Interface;

public interface NavegadorInternet {
    
    public void novaPagina();
    public void fecharPagina();
    
}
