package Interface;

public interface ReprodutorMusical {
    
    public void tocarMusica();
    public void pausarMusica();
    public void trocarMusica();

}
